--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="pt-BR">
 
 <head>
@@ -8,32 +8,29 @@
     <link rel="stylesheet" href="style.css">
     <title>Página de Login</title>
     <link rel="shortcut icon" type="imagex/png" href="logoitop.ico">
-    
 </head>
 
 <body>
 
     <div class="container" id="container">
         <div class="form-container sign-up">
-            <form>
+            <form id="formCadastro">
                 <h1>Crie sua conta</h1>
                 <div class="social-icones">
                     <a href="#" class="icones"><i class="fa-brands fa-google-plus-g"></i></a>
                     <a href="#" class="icones"><i class="fa-brands fa-facebook-f"></i></a>
                     <a href="#" class="icones"><i class="fa-brands fa-github"></i></a>
                     <a href="#" class="icones"><i class="fa-brands fa-linkedin-in"></i></a>
-
                 </div>
                 <span>Ou use seu e-mail para cadastro</span>
-                <input type="text" placeholder="Nome">
-                <input type="email" placeholder="Email">
-                <input type="password" placeholder="Senha">
-                <button>Inscreva-se</button>
+                <input type="text" id="nome" placeholder="Nome">
+                <input type="email" id="email" placeholder="Email">
+                <input type="password" id="senha" placeholder="Senha">
+                <button type="button" id="btnInscrever">Inscreva-se</button>
             </form>
         </div>
         <div class="form-container sign-in">
-            <form>
-                
+            <form id="formulario_cadastro">
                 <h1>Entrar</h1>
                 <div class="social-icones">
                     <a href="#" class="icones"><i class="fa-brands fa-google-plus-g"></i></a>
@@ -42,16 +39,16 @@
                     <a href="#" class="icones"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
                 <span>Ou use seu e-mail e senha</span>
-                <input type="email" placeholder="Email ou CPF">
-                <input type="password" placeholder="Senha">
+                <input type="email" id="emailLogin" placeholder="Email ou CPF">
+                <input type="password" id="senhaLogin" placeholder="Senha">
                 <a href="#">Esqueceu sua senha?</a>
-                <button>Entrar</button>
+                <button type="submit" id="btnEntrar">Entrar</button>
             </form>
         </div>
         <div class="toggle-container">
             <div class="toggle">
                 <div class="toggle-panel toggle-left">
-                    <h1>Bem vindo (a)!</h1>
+                    <h1>Bem vindo(a)!</h1>
                     <p>Registre seus dados pessoais para usar todos os recursos do site</p>
                     <button class="hidden" id="login">Sign In</button>
                 </div>
@@ -65,6 +62,7 @@
     </div>
 
     <script src="script.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
